# number-cruncher-agent

./: README.md  pyproject.toml
src/number_cruncher_flow/: main.py  question.txt  question_tools.py
src/number_cruncher_flow/crews/number_cruncher_crew/: number_cruncher_crew.py
src/number_cruncher_flow/crews/number_cruncher_crew/config/: agents.yaml  tasks.yaml
