[project]
name = "number_cruncher_flow"
version = "0.1.0"
description = "number_cruncher-flow using crewAI"
authors = [{ name = "Pradeep Singh Rajpoot", email = "m22ai824@iitj.ac.in" }, { name = "Sri Om Shubham", email = "m22ai836@iitj.ac.in" }, { name = "Karthikeyan U", email = "m22ai817@iitj.ac.in" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.75.1,<1.0.0",
]

[project.scripts]
kickoff = "number_cruncher_flow.main:kickoff"
plot = "number_cruncher_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
